--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
 <script th:src="@{jquery-1.4.4.min.js}" type="text/javascript"></script>
 <script th:src="@{bootstrap/js/bootstrap.min.js}" type="text/javascript"></script>
 <!--th:inline="javascript",javascript代码可访问model中的属性-->
-<script th:inline="javascript">
+<script th:inline="javascript" type="text/javascript">
     /*通过该格式获取实际的值*/
     var single = [[${singlePerson}]];
     console.log(single.name + "/" + single.age);
