angularjs封装日期选择器

--- a/src/main/resources/templates/ws.html
+++ b/src/main/resources/templates/ws.html
@@ -20,7 +20,7 @@
 </div>
 <script th:src="@{sockjs-0.3.min.js}"></script>
 <script th:src="@{stomp.js}"></script>
-<script th:src="@{jquery-1.4.4.min.js}"></script>
+<script th:src="@{jquery.min.js}"></script>
 <script type="text/javascript">
     var stompClient = null;
 
