--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -5,7 +5,7 @@
     <title>Home</title>
     <script th:src="@{sockjs-0.3.min.js}"></script>
     <script th:src="@{stomp.js}"></script>
-    <script th:src="@{jquery-1.4.4.min.js}"></script>
+    <script th:src="@{jquery.min.js}"></script>
 </head>
 <body>
 <p>聊天室</p>
