--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,7 +36,7 @@
     </div>
 </div>
 
-<script th:src="@{jquery-1.4.4.min.js}" type="text/javascript"></script>
+<script th:src="@{jquery.min.js}" type="text/javascript"></script>
 <script th:src="@{bootstrap/js/bootstrap.min.js}" type="text/javascript"></script>
 <!--th:inline="javascript",javascript代码可访问model中的属性-->
 <script th:inline="javascript" type="text/javascript">
