--- a/src/main/resources/templates/view2.html
+++ b/src/main/resources/templates/view2.html
@@ -8,6 +8,6 @@
 <div class="row">
     <label for="style" class="col-md-2 control-label">样式形式</label>
     <div class="col-md-2">
-        <input type="text" class="form-control" date-picker>
+        <input type="text" class="form-control date-picker">
     </div>
 </div>
